# experiment-hermetic-cc-toolchain

./: BUILD  MODULE.bazel  WORKSPACE  go.mod  go.sum  main.go  main_test.go
